<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.danie.battleshipnewversion.MainActivity"
    android:background="@drawable/winlossimage">

    <TextView
        android:id="@+id/loss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="60dp"
        android:textStyle="bold"
        android:textColor="#FFF8DC"
        android:layout_centerHorizontal="true"
        android:text="@string/sorry"
        android:fontFamily="serif"
    />

    <TextView
        android:id="@+id/you_loss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="#FFF8DC"
        android:layout_below="@+id/loss"
        android:fontFamily="serif"
        android:layout_centerHorizontal="true"
        android:text="@string/you_loss"
        />


    <Button
        android:id="@+id/tryagain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:textSize="25dp"
        android:fontFamily="serif"
        android:textColor="#191970"
        android:textStyle="bold"
        android:text="@string/tryagain"
        android:layout_below="@+id/you_loss"
        android:layout_centerHorizontal="true"
        android:onClick="restartGame"
       />


</RelativeLayout>
